# mircat

./: .gitignore  Dockerfile  README.md  pyproject.toml
src/mircat/: __init__.py
