[project]
name = "mircat"
version = "0.1.3"
description = "Mirshahi CT Analysis Toolkit (MirCAT). Convert, Segment, and Quantify CT NIfTI files."
readme = "README.md"
requires-python = ">=3.10,<3.12"
dependencies = [
    "loguru>=0.7.2",
    "nibabel>=5.2.1",
    "numpy<2.0.0",
    "scipy==1.13.1",
    "threadpoolctl>=3.5.0",
    "mircat-seg",
    "mircat-stats",
    "matplotlib>=3.9.2",
]

[project.scripts]
mircat = "mircat:mircat"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
mircat-seg = { workspace = true }
mircat-stats = { workspace = true }

[tool.uv.workspace]
members = ["packages/mircat-seg", "packages/mircat-stats"]

[tool.ruff]
line-length = 120